# api-id-assigner

./: .gitignore  Cargo.toml  README.md
.forgejo/workflows/: rust.yaml
api/axum/: Cargo.toml  config.toml  db.sqlite
api/axum/migrations/: 20230910195018_schema.sql
api/axum/src/: main.rs
api/lib/: Cargo.toml
api/lib/src/: lib.rs  node.rs  router.rs  users.rs
shared/: Cargo.toml
shared/src/: models.rs
