[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend = ['sqlx']

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.7.1", default-features = false, features = [ "runtime-async-std-native-tls", "macros", "postgres", "uuid", "chrono", "json" ], optional = true }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
